objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>test</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Code__c</fullName>
        <label>Adjustment Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Instructions__c</fullName>
        <label>Adjustment Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffectedQty__c</fullName>
        <label>Affected Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Affected_Type__c</fullName>
        <label>Affected Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigarette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pouch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional packing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snus Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snus Pack</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BrandID__c</fullName>
        <description>Feed Outbound - Brand Code.</description>
        <formula>Crc_Brand_Hierarchy_Code__r.Brand_Code__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BrandID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Hierarchy_Code__c</fullName>
        <description>It is only for Complaints_Outbound feed.</description>
        <formula>Crc_Brand_Hierarchy_Code__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Hierarchy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brandcode__c</fullName>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Keywords__c</fullName>
        <label>Call Keywords</label>
        <picklist>
            <picklistValues>
                <fullName>Stopped Breathing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fainted</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Caller_Name__c</fullName>
        <label>Caller Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CauseCode__c</fullName>
        <description>Feed Outbound</description>
        <formula>Issue_Hierarchy_Code__r.Cause__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CauseCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cause</label>
        <referenceTo>Cause__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Causetxt__c</fullName>
        <label>Cause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationCode__c</fullName>
        <description>Feed Outbound</description>
        <formula>Issue_Hierarchy_Code__r.Classification__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClassificationCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Classification</label>
        <referenceTo>Classification__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classificationtxt__c</fullName>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeCategory__c</fullName>
        <label>CodeCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Type__c</fullName>
        <label>Code Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Consumer Return Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Age_Verified__c</fullName>
        <formula>Contact.AVF_GIID_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer Age Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consumer_Mentions__c</fullName>
        <label>Consumer Mentions</label>
        <picklist>
            <picklistValues>
                <fullName>Contacting Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacting Better Business Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacting FDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacting Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switching to a competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threatens quitting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Consumer_Return__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumer Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactChannel__c</fullName>
        <description>Feed Outbound - Hardcode value &apos;DNCNIBT&apos;</description>
        <formula>&apos;DNCNIBT&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactChannel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactType__c</fullName>
        <formula>TEXT( Contact.Customer_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Apt_Lot__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact Apt Lot</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_CCN_Number__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact CCN  Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_DOB__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact DOB</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Street_Address__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Zip_Code__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crc_Brand_Hierarchy_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Crc Brand Hierarchy Code</label>
        <referenceTo>Brand_Hierarchy__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Feed Outbound - DateFormat</description>
        <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <description>Feed Outbound</description>
        <formula>Contact.CustomerID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut__c</fullName>
        <label>Cut</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNUA_Date__c</fullName>
        <label>DNUA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateCodeColdStorage__c</fullName>
        <label>Date Code Cold Storage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCodeLocation__c</fullName>
        <label>Date Code Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCodeMilitaryTime__c</fullName>
        <label>Date Code Military Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCodeProductionDate__c</fullName>
        <label>Date Code Production Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCodeRptBay__c</fullName>
        <label>Date Code Rpt Bay</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCodeRptFactory__c</fullName>
        <label>Date Code Rpt Factory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCodeShift__c</fullName>
        <label>Date Code Shift</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCodeUnit__c</fullName>
        <label>Date Code Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Code__c</fullName>
        <label>Date Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Type__c</fullName>
        <label>Date Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailAlertId__c</fullName>
        <description>Feed Outbound - Hardcode value 0.</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Alert Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpReturnTotalCost__c</fullName>
        <description>Feed Outbound - HardCode value 0.</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExpReturnTotalCost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exp_Date__c</fullName>
        <label>Exp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedQty__c</fullName>
        <label>Expected Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Type__c</fullName>
        <label>Expected Type</label>
        <picklist>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigarette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pouch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional packing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snus Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snus Pack</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <label>Filter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flavor__c</fullName>
        <label>Flavor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force__c</fullName>
        <description>Test field for issue FEED INBOUND</description>
        <label>Force</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupCodeID__c</fullName>
        <description>Feed Outbound</description>
        <formula>Issue_Hierarchy_Code__r.Group_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroupCodeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Code__c</fullName>
        <label>Group Code</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Tracking__c</fullName>
        <label>Inbound Tracking #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Date__c</fullName>
        <label>Incident Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Depleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Depleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssueHierarchyCode__c</fullName>
        <label>IssueHierarchyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IssueURL__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Issue_Detail?id=&apos;+ Id , Id)</formula>
        <label>IssueURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Hierarchy_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue Hierarchy Code</label>
        <referenceTo>Issue_Hierarchy__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Hierarchy_Name__c</fullName>
        <description>It is only for Complaints_Outbound feed.</description>
        <formula>Issue_Hierarchy_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Hierarchy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>Feed Outbound - DateFormat</description>
        <formula>MID( TEXT(LastModifiedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_Code__c</fullName>
        <label>Length Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Code__c</fullName>
        <label>Machine Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Symptom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major Symptom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mfg_Trace_code__c</fullName>
        <label>Mfg/Trace code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Company__c</fullName>
        <formula>TEXT(Product_Line_Code__r.Operating_Company__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operating Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Tracking__c</fullName>
        <label>Outbound Tracking #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overage__c</fullName>
        <label>Overage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLCode__c</fullName>
        <label>Product Line Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging__c</fullName>
        <label>Packaging</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Type__c</fullName>
        <label>Paper Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_Up_Policy_Weeks__c</fullName>
        <label>Pick Up Policy Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Crc_Issue_Detail_Id__c</fullName>
        <label>Primary Crc Issue Detail Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProdrReturnReq__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProdrReturnReq.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductCode2__c</fullName>
        <label>ProductCode2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>ProductCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line Code</label>
        <referenceTo>Product_Line__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductionDate__c</fullName>
        <label>ProductionDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date_Type__c</fullName>
        <label>Production Date Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_date__c</fullName>
        <label>Production date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>ProgramCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseQty__c</fullName>
        <label>Purchase Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Type__c</fullName>
        <label>Purchase Type</label>
        <picklist>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigarette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pouch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional packing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snus Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snus Pack</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReasonCode__c</fullName>
        <description>Feed Outbound</description>
        <formula>Issue_Hierarchy_Code__r.Reason_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReasonCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reason</label>
        <referenceTo>Reason__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reasontxt__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reimbchk__c</fullName>
        <formula>IF( Reimbursement_Count__c &gt;0, &apos;Created&apos;, &apos;Not Created&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reimbursement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reimbursed_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reimbursed Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Count__c</fullName>
        <label>Reimbursement Count</label>
        <summaryForeignKey>Reimbursement__c.Issue__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Related_Issue__c</fullName>
        <label>Related Issue</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reship_Reason__c</fullName>
        <label>Consumer Return Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sell_by_Date__c</fullName>
        <label>Sell by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SizeCode__c</fullName>
        <label>SizeCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpUstDateCode__c</fullName>
        <label>SpUstDateCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StickerInfo__c</fullName>
        <label>StickerInfo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <label>Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyHiddenReason__c</fullName>
        <label>SurveyHiddenReason</label>
        <picklist>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Cancel_Comments__c</fullName>
        <label>Survey Cancel Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Cancel_Reason__c</fullName>
        <label>Survey Cancel Reason</label>
        <picklist>
            <controllingField>SurveyHiddenReason__c</controllingField>
            <picklistValues>
                <fullName>Customer Busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t have Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takes Too Long</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspected_Counterfiet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspected Counterfeit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspected_Tampering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspected Tampering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taste__c</fullName>
        <label>Taste</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <formula>&apos;ALORICAALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenantId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdPartyContacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TraceCodeLocation__c</fullName>
        <label>TraceCodeLocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trace_Code_Location__c</fullName>
        <label>Trace Code Location</label>
        <picklist>
            <picklistValues>
                <fullName>KIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transacation_Id__c</fullName>
        <description>It is only for Complaints_Outbound feed.</description>
        <formula>Transaction__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transacation Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Management_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Management History</label>
        <referenceTo>Transaction_Management_History__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Master__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transaction Master</label>
        <referenceTo>Transaction_Management__c</referenceTo>
        <relationshipLabel>Cases (Transaction Management)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction_Management__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_code__c</fullName>
        <label>UPC code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Reason__c</fullName>
        <label>Update Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ValidTraceCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidTraceCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidUstdateCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidUstdateCode</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Brandcode__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Classificationtxt__c</columns>
        <columns>Reasontxt__c</columns>
        <columns>Causetxt__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>Reimbchk__c</columns>
        <columns>Transaction_Master__c</columns>
        <columns>Transaction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Issues</label>
    </listViews>
</CustomObject>